# Food-Ordering-App

./: .gitignore  README.md  db.py  main.py  main.sql  pyproject.toml
screens/: address.kv  cart.kv  dashboard.kv  login.kv  orders.kv  restaurant.kv  root.kv  wallet.kv
tests/: test_address.py  test_auth_and_catalog.py  test_orders.py  test_wallet_and_cart.py
